@@ -49,65 +49,60 @@
 
 package com.openexchange.ajax.requesthandler.converters.preview.cache.groupware;
 
-import com.openexchange.database.AbstractCreateTableImpl;
+import static com.openexchange.tools.sql.DBUtils.autocommit;
+import static com.openexchange.tools.sql.DBUtils.rollback;
+import static com.openexchange.tools.sql.DBUtils.startTransaction;
+import java.sql.Connection;
+import java.sql.SQLException;
+import com.openexchange.databaseold.Database;
+import com.openexchange.exception.OXException;
+import com.openexchange.groupware.update.PerformParameters;
+import com.openexchange.groupware.update.UpdateExceptionCodes;
+import com.openexchange.groupware.update.UpdateTaskAdapter;
+import com.openexchange.tools.update.Column;
+import com.openexchange.tools.update.Tools;
 
 
 /**
- * {@link PreviewCacheCreateTableService}
+ * Previously the columns fileName and fileType were varchars with a length of
+ * 128 resp. 32. Therefore TruncatedExceptions could occur if those fields were
+ * exceeded by for example previews for infostore items. Both columns are enlarged
+ * to match the sizes of their counterparts in the infostore_document table.
  *
- * @author <a href="mailto:thorben.betten@open-xchange.com">Thorben Betten</a>
+ * @author <a href="mailto:steffen.templin@open-xchange.com">Steffen Templin</a>
+ * @since v7.6.0
  */
-public final class PreviewCacheCreateTableService extends AbstractCreateTableImpl {
+public class ChangeFileNameAndTypeLength extends UpdateTaskAdapter {
 
-    /**
-     * Gets the table names.
-     *
-     * @return The table names.
-     */
-    public static String[] getTablesToCreate() {
-        return new String[] { "preview" };
-    }
-
-    /**
-     * Gets the CREATE-TABLE statements.
-     *
-     * @return The CREATE statements
-     */
-    public static String[] getCreateStmts() {
-        return new String[] { "CREATE TABLE "+"preview"+" (" +
-            " cid INT4 unsigned NOT NULL," +
-            " user INT4 unsigned NOT NULL," +
-            " id VARCHAR(128) CHARACTER SET latin1 NOT NULL," +
-            " size BIGINT(64) NOT NULL," +
-            " createdAt BIGINT(64) NOT NULL," +
-            " fileName VARCHAR(767) COLLATE utf8_unicode_ci DEFAULT NULL," +
-            " fileType VARCHAR(255) CHARACTER SET latin1 DEFAULT NULL," +
-            " refId VARCHAR(255) CHARACTER SET latin1 DEFAULT NULL," +
-            " PRIMARY KEY (cid, user, id)," +
-            " INDEX `globaldocument` (cid, id)" +
-            ") ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci" };
-    }
-
-    /**
-     * Initializes a new {@link PreviewCacheCreateTableService}.
-     */
-    public PreviewCacheCreateTableService() {
-        super();
+    @Override
+    public void perform(PerformParameters params) throws OXException {
+        int contextId = params.getContextId();
+        Connection con = Database.getNoTimeout(contextId, true);
+        boolean rollback = false;
+        try {
+            startTransaction(con);
+            rollback = true;
+            Column cFileName = new Column("fileName", "varchar(767) COLLATE utf8_unicode_ci DEFAULT NULL");
+            Column cFileType = new Column("fileType", "varchar(255) COLLATE utf8_unicode_ci DEFAULT NULL");
+            Tools.checkAndModifyColumns(con, "preview", cFileName, cFileType);
+            con.commit();
+            rollback = false;
+        } catch (final SQLException e) {
+            throw UpdateExceptionCodes.SQL_PROBLEM.create(e, e.getMessage());
+        } catch (final RuntimeException e) {
+            throw UpdateExceptionCodes.UNEXPECTED_ERROR.create(e, e.getMessage());
+        } finally {
+            if (rollback) {
+                rollback(con);
+            }
+            autocommit(con);
+            Database.backNoTimeout(contextId, true, con);
+        }
     }
 
     @Override
-    public String[] requiredTables() {
-        return NO_TABLES;
-    }
-
-    @Override
-    public String[] tablesToCreate() {
-        return getTablesToCreate();
-    }
-
-    @Override
-    protected String[] getCreateStatements() {
-        return getCreateStmts();
+    public String[] getDependencies() {
+        return new String[] { DropDataFromPreviewCacheTable.class.getName(), AddRefIdForPreviewCacheTable.class.getName() };
     }
 
 }
